correção de user

--- a/hrms/consultas_paciente.html
+++ b/hrms/consultas_paciente.html
@@ -887,8 +887,7 @@
         superuser:[]
       },
       created(){
-        //id = sessionStorage.getItem("id");
-        id =  "5f419fde57ba440017d7315c"
+        id = sessionStorage.getItem("id");
         console.log("=====================================",id);
 
         axios
