--- a/hrms/entrar.html
+++ b/hrms/entrar.html
@@ -50,6 +50,8 @@
             <form class="form-auth-small" action="dashboard.html">
               <div class="mb-3">
                 <p class="lead">Entre com sua conta</p>
+                <p><strong>Visão hospital:</strong> Usuario: admin Senha: admin</p>
+                <p><strong>Visão paciente:</strong> Usuario: paciente Senha: paciente</p>
               </div>
               <div class="form-group">
                 <label for="signin-email" class="control-label sr-only"
