--- a/hrms/dashboard.html
+++ b/hrms/dashboard.html
@@ -301,7 +301,7 @@
                             <div class="d-flex align-items-center">
                                 <div class="avtar-pic w35 bg-red" data-toggle="tooltip" data-placement="top" title="" data-original-title="Avatar Name"><span>SS</span></div>
                                 <div class="ml-3">
-                                    <a href="page-invoices-detail.html" title="">South Shyanne</a>
+                                    <a href="#" title="">South Shyanne</a>
                                     <p class="mb-0">south.shyanne@example.com</p>
                                 </div>
                             </div>
@@ -404,7 +404,7 @@
                     <div class="card">
                         <div class="body ribbon">
                             <div class="ribbon-box green">5</div>
-                            <a href="users.html" class="my_sort_cut text-muted">
+                            <a href="#" class="my_sort_cut text-muted">
                                 <i class="icon-users"></i>
                                 <span>Users</span>
                             </a>
@@ -414,7 +414,7 @@
                 <div class="col-6 col-md-4 col-xl-2">
                     <div class="card">
                         <div class="body">
-                            <a href="holidays.html" class="my_sort_cut text-muted">
+                            <a href="#" class="my_sort_cut text-muted">
                                 <i class="icon-like"></i>
                                 <span>Holidays</span>
                             </a>
@@ -425,7 +425,7 @@
                     <div class="card">
                         <div class="body ribbon">
                             <div class="ribbon-box orange">8</div>
-                            <a href="events.html" class="my_sort_cut text-muted">
+                            <a href="#" class="my_sort_cut text-muted">
                                 <i class="icon-calendar"></i>
                                 <span>Events</span>
                             </a>
@@ -435,7 +435,7 @@
                 <div class="col-6 col-md-4 col-xl-2">
                     <div class="card">
                         <div class="body">
-                            <a href="payroll.html" class="my_sort_cut text-muted">
+                            <a href="#" class="my_sort_cut text-muted">
                                 <i class="icon-credit-card"></i>
                                 <span>Payroll</span>
                             </a>
@@ -445,7 +445,7 @@
                 <div class="col-6 col-md-4 col-xl-2">
                     <div class="card">
                         <div class="body">
-                            <a href="accounts.html" class="my_sort_cut text-muted">
+                            <a href="#" class="my_sort_cut text-muted">
                                 <i class="icon-calculator"></i>
                                 <span>Accounts</span>
                             </a>
@@ -455,7 +455,7 @@
                 <div class="col-6 col-md-4 col-xl-2">
                     <div class="card">
                         <div class="body">
-                            <a href="report.html" class="my_sort_cut text-muted">
+                            <a href="#" class="my_sort_cut text-muted">
                                 <i class="icon-pie-chart"></i>
                                 <span>Report</span>
                             </a>
@@ -815,7 +815,7 @@
                     <div class="card">
                         <div class="body ribbon">
                             <div class="ribbon-box green">5</div>
-                            <a href="users.html" class="my_sort_cut text-muted">
+                            <a href="#" class="my_sort_cut text-muted">
                                 <i class="icon-users"></i>
                                 <span>Users</span>
                             </a>
@@ -825,7 +825,7 @@
                 <div class="col-6 col-md-4 col-xl-2">
                     <div class="card">
                         <div class="body">
-                            <a href="holidays.html" class="my_sort_cut text-muted">
+                            <a href="#" class="my_sort_cut text-muted">
                                 <i class="icon-like"></i>
                                 <span>Holidays</span>
                             </a>
@@ -836,7 +836,7 @@
                     <div class="card">
                         <div class="body ribbon">
                             <div class="ribbon-box orange">8</div>
-                            <a href="events.html" class="my_sort_cut text-muted">
+                            <a href="#" class="my_sort_cut text-muted">
                                 <i class="icon-calendar"></i>
                                 <span>Events</span>
                             </a>
@@ -846,7 +846,7 @@
                 <div class="col-6 col-md-4 col-xl-2">
                     <div class="card">
                         <div class="body">
-                            <a href="payroll.html" class="my_sort_cut text-muted">
+                            <a href="#" class="my_sort_cut text-muted">
                                 <i class="icon-credit-card"></i>
                                 <span>Payroll</span>
                             </a>
@@ -856,7 +856,7 @@
                 <div class="col-6 col-md-4 col-xl-2">
                     <div class="card">
                         <div class="body">
-                            <a href="accounts.html" class="my_sort_cut text-muted">
+                            <a href="#" class="my_sort_cut text-muted">
                                 <i class="icon-calculator"></i>
                                 <span>Accounts</span>
                             </a>
@@ -866,7 +866,7 @@
                 <div class="col-6 col-md-4 col-xl-2">
                     <div class="card">
                         <div class="body">
-                            <a href="report.html" class="my_sort_cut text-muted">
+                            <a href="#" class="my_sort_cut text-muted">
                                 <i class="icon-pie-chart"></i>
                                 <span>Report</span>
                             </a>
