--- a/hrms/perfil.html
+++ b/hrms/perfil.html
@@ -294,7 +294,7 @@
                             <div class="d-flex align-items-center">
                                 <div class="avtar-pic w35 bg-red" data-toggle="tooltip" data-placement="top" title="" data-original-title="Avatar Name"><span>SS</span></div>
                                 <div class="ml-3">
-                                    <a href="page-invoices-detail.html" title="">South Shyanne</a>
+                                    <a href="#" title="">South Shyanne</a>
                                     <p class="mb-0">south.shyanne@example.com</p>
                                 </div>
                             </div>
@@ -395,12 +395,12 @@
             <div class="row clearfix">
                 <div class="col-12">
                     <ul class="q_links">
-                        <li><a href="app-inbox.html"><i class="icon-envelope"></i><span>Inbox</span></a></li>
-                        <li><a href="app-chat.html"><i class="icon-bubbles"></i><span>Messenger</span></a></li>
-                        <li><a href="app-calendar.html"><i class="icon-calendar"></i><span>Event</span></a></li>
-                        <li><a href="page-profile.html"><i class="icon-user"></i><span>Profile</span></a></li>
-                        <li><a href="page-invoices.html"><i class="icon-printer"></i><span>Invoice</span></a></li>
-                        <li><a href="page-timeline.html"><i class="icon-list"></i><span>Timeline</span></a></li>
+                        <li><a href="#"><i class="icon-envelope"></i><span>Inbox</span></a></li>
+                        <li><a href="#"><i class="icon-bubbles"></i><span>Messenger</span></a></li>
+                        <li><a href="#"><i class="icon-calendar"></i><span>Event</span></a></li>
+                        <li><a href="#"><i class="icon-user"></i><span>Profile</span></a></li>
+                        <li><a href="#"><i class="icon-printer"></i><span>Invoice</span></a></li>
+                        <li><a href="#"><i class="icon-list"></i><span>Timeline</span></a></li>
                     </ul>
                 </div>
             </div>
