--- a/hrms/consultas_paciente.html
+++ b/hrms/consultas_paciente.html
@@ -303,7 +303,7 @@
                             <div class="d-flex align-items-center">
                                 <div class="avtar-pic w35 bg-red" data-toggle="tooltip" data-placement="top" title="" data-original-title="Avatar Name"><span>SS</span></div>
                                 <div class="ml-3">
-                                    <a href="page-invoices-detail.html" title="">South Shyanne</a>
+                                    <a href="#" title="">South Shyanne</a>
                                     <p class="mb-0">south.shyanne@example.com</p>
                                 </div>
                             </div>
@@ -406,7 +406,7 @@
                     <div class="card">
                         <div class="body ribbon">
                             <div class="ribbon-box green">5</div>
-                            <a href="users.html" class="my_sort_cut text-muted">
+                            <a href="#" class="my_sort_cut text-muted">
                                 <i class="icon-users"></i>
                                 <span>Users</span>
                             </a>
@@ -416,7 +416,7 @@
                 <div class="col-6 col-md-4 col-xl-2">
                     <div class="card">
                         <div class="body">
-                            <a href="holidays.html" class="my_sort_cut text-muted">
+                            <a href="#" class="my_sort_cut text-muted">
                                 <i class="icon-like"></i>
                                 <span>Holidays</span>
                             </a>
@@ -427,7 +427,7 @@
                     <div class="card">
                         <div class="body ribbon">
                             <div class="ribbon-box orange">8</div>
-                            <a href="events.html" class="my_sort_cut text-muted">
+                            <a href="#" class="my_sort_cut text-muted">
                                 <i class="icon-calendar"></i>
                                 <span>Events</span>
                             </a>
@@ -437,7 +437,7 @@
                 <div class="col-6 col-md-4 col-xl-2">
                     <div class="card">
                         <div class="body">
-                            <a href="payroll.html" class="my_sort_cut text-muted">
+                            <a href="#" class="my_sort_cut text-muted">
                                 <i class="icon-credit-card"></i>
                                 <span>Payroll</span>
                             </a>
@@ -447,7 +447,7 @@
                 <div class="col-6 col-md-4 col-xl-2">
                     <div class="card">
                         <div class="body">
-                            <a href="accounts.html" class="my_sort_cut text-muted">
+                            <a href="#" class="my_sort_cut text-muted">
                                 <i class="icon-calculator"></i>
                                 <span>Accounts</span>
                             </a>
@@ -457,7 +457,7 @@
                 <div class="col-6 col-md-4 col-xl-2">
                     <div class="card">
                         <div class="body">
-                            <a href="report.html" class="my_sort_cut text-muted">
+                            <a href="#" class="my_sort_cut text-muted">
                                 <i class="icon-pie-chart"></i>
                                 <span>Report</span>
                             </a>
