--- a/hrms/medicos.html
+++ b/hrms/medicos.html
@@ -493,7 +493,7 @@
                       <span>SS</span>
                     </div>
                     <div class="ml-3">
-                      <a href="page-invoices-detail.html" title=""
+                      <a href="#" title=""
                         >South Shyanne</a
                       >
                       <p class="mb-0">south.shyanne@example.com</p>
@@ -648,7 +648,7 @@
               <div class="card">
                 <div class="body ribbon">
                   <div class="ribbon-box green">5</div>
-                  <a href="users.html" class="my_sort_cut text-muted">
+                  <a href="#" class="my_sort_cut text-muted">
                     <i class="icon-users"></i>
                     <span>Users</span>
                   </a>
@@ -658,7 +658,7 @@
             <div class="col-6 col-md-4 col-xl-2">
               <div class="card">
                 <div class="body">
-                  <a href="holidays.html" class="my_sort_cut text-muted">
+                  <a href="#" class="my_sort_cut text-muted">
                     <i class="icon-like"></i>
                     <span>Holidays</span>
                   </a>
@@ -669,7 +669,7 @@
               <div class="card">
                 <div class="body ribbon">
                   <div class="ribbon-box orange">8</div>
-                  <a href="events.html" class="my_sort_cut text-muted">
+                  <a href="#" class="my_sort_cut text-muted">
                     <i class="icon-calendar"></i>
                     <span>Events</span>
                   </a>
@@ -679,7 +679,7 @@
             <div class="col-6 col-md-4 col-xl-2">
               <div class="card">
                 <div class="body">
-                  <a href="payroll.html" class="my_sort_cut text-muted">
+                  <a href="#" class="my_sort_cut text-muted">
                     <i class="icon-credit-card"></i>
                     <span>Payroll</span>
                   </a>
@@ -689,7 +689,7 @@
             <div class="col-6 col-md-4 col-xl-2">
               <div class="card">
                 <div class="body">
-                  <a href="accounts.html" class="my_sort_cut text-muted">
+                  <a href="#" class="my_sort_cut text-muted">
                     <i class="icon-calculator"></i>
                     <span>Accounts</span>
                   </a>
@@ -699,7 +699,7 @@
             <div class="col-6 col-md-4 col-xl-2">
               <div class="card">
                 <div class="body">
-                  <a href="report.html" class="my_sort_cut text-muted">
+                  <a href="#" class="my_sort_cut text-muted">
                     <i class="icon-pie-chart"></i>
                     <span>Report</span>
                   </a>
